# sam-3d-body

./: pyproject.toml
data/scripts/egohumans/: undistort_images.py
data/scripts/harmony4d/: undistort_images.py
notebook/: utils.py
sam_3d_body/: build_models.py  sam_3d_body_estimator.py
tools/: build_detector.py  build_fov_estimator.py  build_sam.py
